--- a/latex/Tree-based_methods.tex
+++ b/latex/Tree-based_methods.tex
@@ -13,7 +13,7 @@ This makes the method very general, both in terms of nonlinearity and in type of
 
 There are several different algorithms using this framework. They differ in the methods used for splitting, and in how large to grow the tree. Obviously, growing a full tree, i.e. only one training point in each end node, will cause overfitting, while growing it too short will cause underfitting. 
 
-In the regression framework, \colorbox{yellow}{under squared error loss?}, it can be show that a small tree (e.g. two terminal nodes) has high bias and low variance, while a larger tree is highly unstable, but with less bias. In appendix~\ref{sub:EPE}, it is show how the expected prediction error is composed by the bias and variance. Therefore this \textit{bias-variance tradeoff} is important to consider when creating the prediction method. 
+In the regression framework, \colorbox{yellow}{under squared error loss?}, it can be shown that a small tree (e.g. two terminal nodes) has high bias and low variance, while a larger tree is highly unstable, but with less bias. In appendix~\ref{sec:EPE}, it is shown how the expected prediction error is composed by the bias and variance. Therefore this \textit{bias-variance tradeoff} is important to consider when creating the prediction method. 
 
 For classification the same argument does not quite hold because of the non-additivity between them. Similar definitions for bias and variance has been proposed for $0/1$ loss in the literature. Among the most famous are \cite{kong1995error}, \cite{kohavi1996bias}, \cite{breiman1996bias} and \cite{Friedman1997bias}. While they have all provided useful insight to classification problems, non of them present a framework as simple and satisfactory as for regression. In this paper when referring to bias or variance for classifiers, it is more in a heuristic way. Loosely, bias measures the systematic error of a classifier, i.e. the average error over different training sets. Variance measures the additional error do to variations in the classifier between training sets. 
 \todo{Rewrite section and maybe split up?}
