--- a/latex/mybib.bib
+++ b/latex/mybib.bib
@@ -254,6 +254,13 @@
   Url                      = {http://www.R-project.org/}
 }
 
+@Article{segal2004,
+  Title                    = {Machine learning benchmarks and random forest regression},
+  Author                   = {Segal, Mark R},
+  Journal                  = {Center for Bioinformatics \& Molecular Biostatistics},
+  Year                     = {2004}
+}
+
 @Manual{rpart,
   Title                    = {rpart: Recursive Partitioning and Regression Trees},
   Author                   = {Terry Therneau and Beth Atkinson and Brian Ripley},
